service/tests/models/products/snapshots/attribute_values/can_create_attribute_value_and_trim_value@attribute_values.snap
---
source: tests/models/products/attribute_values.rs
expression: result
---
Ok(
    AttributeValue {
        id: ID,
        pid: PID,
        attribute_id: ID,
        value: "Charcoal",
        created_at: DATE,
        updated_at: DATE,
    },
)
