service/tests/models/products/snapshots/attribute_values/can_create_attribute_value_successful@attribute_values.snap
---
source: tests/models/products/attribute_values.rs
expression: result
---
Ok(
    AttributeValue {
        id: ID,
        pid: PID,
        attribute_id: ID,
        value: "Gold",
        created_at: DATE,
        updated_at: DATE,
    },
)
