service/tests/models/products/snapshots/attribute_values/can_find_black_attribute_value_by_pid@attribute_values.snap
---
source: tests/models/products/attribute_values.rs
expression: result
---
Ok(
    AttributeValue {
        id: 201,
        pid: 9ae5af4e-5174-48f5-ae04-1d74e68f3201,
        attribute_id: 201,
        value: "Black",
        created_at: 2026-07-02T12:16:00+00:00,
        updated_at: 2026-07-02T12:16:00+00:00,
    },
)
