service/tests/models/products/snapshots/attribute_values/can_find_medium_attribute_value_by_pid@attribute_values.snap
---
source: tests/models/products/attribute_values.rs
expression: result
---
Ok(
    AttributeValue {
        id: 205,
        pid: 4cd5e3c1-06e9-485e-bc62-ea9309d93205,
        attribute_id: 202,
        value: "M",
        created_at: 2026-07-02T12:20:00+00:00,
        updated_at: 2026-07-02T12:20:00+00:00,
    },
)
