service/tests/models/products/snapshots/attribute_values/cannot_create_attribute_value_if_attribute_does_not_exist@attribute_values.snap
---
source: tests/models/products/attribute_values.rs
expression: result
---
Err(
    InvalidReference(
        "Attribute does not exist.",
    ),
)
