service/tests/models/products/snapshots/attribute_values/cannot_create_attribute_value_if_value_exists_for_attribute@attribute_values.snap
---
source: tests/models/products/attribute_values.rs
expression: result
---
Err(
    EntityAlreadyExists(
        "Attribute already has this value.",
    ),
)
