service/tests/models/products/snapshots/attribute_values/will_return_attribute_value_if_value_exists_for_attribute@attribute_values.snap
---
source: tests/models/products/attribute_values.rs
expression: result
---
Ok(
    AttributeValue {
        id: ID,
        pid: PID,
        attribute_id: ID,
        value: "Black",
        created_at: DATE,
        updated_at: DATE,
    },
)
